--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-music-embed",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "React component for Apple Music embeds",
   "author": "Lachlan Campbell",
   "license": "MIT",
@@ -9,33 +9,33 @@
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
   "scripts": {
-    "dev": "x0 docs -op 8080",
-    "docs": "x0 build docs",
+    "dev": "next",
+    "docs": "next build && next export",
     "build": "rollup -c",
     "start": "rollup -c -w",
     "prepare": "npm run build",
-    "deploy": "gh-pages -d site"
+    "deploy": "gh-pages -d out"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@compositor/x0": "^6.0.7",
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "gh-pages": "^1.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "rollup": "^0.64.1",
+    "gh-pages": "^3.2.3",
+    "next": "^12.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rollup": "^2.70.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-url": "^1.4.0",
     "styled-components": "^4.3.2"
   },
