--- a/package.json
+++ b/package.json
@@ -1,51 +1,32 @@
 {
   "name": "react-music-embed",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "React component for Apple Music embeds",
   "author": "Lachlan Campbell",
   "license": "MIT",
-  "repository": "lachlanjc/react-music-embed",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
-  "scripts": {
-    "dev": "next",
-    "docs": "next build && next export",
-    "build": "rollup -c",
-    "start": "rollup -c -w",
-    "prepare": "npm run build",
-    "deploy": "gh-pages -d out"
-  },
-  "peerDependencies": {
-    "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "gh-pages": "^3.2.3",
-    "next": "^12.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rollup": "^2.70.0",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-url": "^1.4.0",
-    "styled-components": "^4.3.2"
-  },
+  "repository": "https://github.com/lachlanjc/react-music-embed",
+  "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "x0": {
-    "static": true,
-    "outDir": "site",
-    "title": "react-music-embed",
-    "basename": "/react-music-embed"
+  "scripts": {
+    "dev": "bun run build && cd site && next",
+    "build:docs": "cd site && mkdir -p public && cp ../README.md public/llms.txt && next build",
+    "build": "rm -rf dist && bunchee",
+    "prepublishOnly": "bun run build"
+  },
+  "devDependencies": {
+    "@types/node": "24.0.7",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "bunchee": "^6.5.4",
+    "next": "^15.4.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "peerDependencies": {
+    "react": "^18 || ^19"
   }
 }
